@@ -1,6 +1,7 @@
 1.0.0-b8
 
 * Fix include in example code
+* Fix basic_headers rfc2616 Section 4.2 compliance
 
 --------------------------------------------------------------------------------
 
